Fix Series Direction titles wrapping and overlapping other elements

--- a/client/src/app/panels/series-direction-correlation/series-direction-correlation.component.scss
+++ b/client/src/app/panels/series-direction-correlation/series-direction-correlation.component.scss
@@ -34,4 +34,5 @@ h3 {
     font-size: 18px;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
